# proto-ecdsa-plonky2

./: Cargo.toml  Readme.md  criterion.rs  cspell.json
src/: circuit.rs  lib.rs  main.rs
